--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -25,14 +25,18 @@ library(data.table)
 library(dplyr)
 library(tibble)
 library(zoo)
+library(here)
 
 
-
-capmetro = read.csv("/Users/jonathanbowman/Downloads/capmetro_UT.csv")
+capmetro = read.csv(here("data", "capmetro_UT.csv"))
+#capmetro = read.csv("/Users/jonathanbowman/Downloads/capmetro_UT.csv")
 saratoga = data(SaratogaHouses)
-kredit = read.csv("/Users/jonathanbowman/Downloads/german_credit.csv")
-hotel_dev = read.csv("/Users/jonathanbowman/Downloads/hotels_dev.csv")
-hotel_val = read.csv("/Users/jonathanbowman/Downloads/hotels_val.csv")
+kredit = read.csv(here("data", "german_credit.csv"))
+#kredit = read.csv("/Users/jonathanbowman/Downloads/german_credit.csv")
+#hotel_dev = read.csv("/Users/jonathanbowman/Downloads/hotels_dev.csv")
+hotel_dev = read.csv(here("data", "hotels_dev.csv"))
+#hotel_val = read.csv("/Users/jonathanbowman/Downloads/hotels_val.csv")
+hotel_val = read.csv(here("data", "hotels_val.csv"))
 ```
 
 ```{r}
