--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -57,6 +57,10 @@ avg_board = capmetro %>%
 view(capmetro)
 
 avg_board
+
+ggplot(avg_board) +
+  geom_line(aes(x = hour_of_day, y = avg_pass, col = month)) + 
+  facet_wrap(~day_of_week)
   
 ```
 
