--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -143,4 +143,23 @@ rmse(lmLasso, saratoga_test)
 map2_dbl(minKModel, houseKNN$test, modelr::rmse)
 
 ```
+```{r}
+kredit = read.csv(here("data", "german_credit.csv"))
+kredit$Good = ifelse(kredit$history == "good",1,0)
+kredit$Poor = ifelse(kredit$history == "poor",1,0)
+kredit$Terrible = ifelse(kredit$history == "terrible",1,0)
+
+credHistory = kredit%>%
+  group_by(history)%>%
+  summarise(numDefault = sum(Default), count = n()) %>%
+  mutate(default_liklihood = numDefault/count)
+
+
+ggplot(credHistory)+
+  geom_col(aes(x = history, y = default_liklihood))
+
+
+
+```
+
 
