--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -98,10 +98,7 @@ lambdamin = which.min(AICc(houseLasso))
 outcome <- "mpg"
 variables <- c("cyl", "disp", "hp", "carb")
 
-f <- as.formula(
-  paste(outcome, 
-        paste(variables, collapse = " + "), 
-        sep = " ~ "))
+
 print(f)
 # mpg ~ cyl + disp + hp + carb
 
@@ -111,22 +108,37 @@ model <- eval(bquote(   lm(.(f), data = mtcars)   ))
 
 ###
 
-
-
 houseCoef = coef(houseLasso)
 houseCoef
 coefData = as.data.frame(as.matrix(houseCoef))
 coefData$magnitude = round(abs(coefData$seg100),2)
 coefs = coefData %>%
   filter(magnitude>0)
-rownames = row.names(coefs)
-rownames
+coefs
+coefs_fields = cbind(newColName = rownames(coefs), coefs)
+coefs_fields
+# rownames(coefData) <- 1:nrow(coefData)
+coef_vector = as.vector(coefs_fields[2:nrow(coefs_fields),1])
+coef_vector
+# coef_vector = replace(coef_vector,1, "price")
+coef_vector
+# coef_fields = coefData[2:nrow(coefData),1]
+f <- as.formula(
+  paste("price", 
+        paste(coef_fields, collapse = " + "), 
+        sep = " ~ "))
+# 
+# rownames = row.names(coefs)
+# rownames
 saratoga_split = initial_split(saratoga, prop = 0.8)
 saratoga_train = training(saratoga_split)
 saratoga_test = testing(saratoga_split)
 
 lm2 = lm(price ~ . - pctCollege - sewer - waterfront - landValue - newConstruction, data=saratoga_train)
-### lm for soft coade variables
+
+lmLasso = eval(bquote(lm(.(f), data = saratoga)))
+
+### lm for soft code variables
 lmLasso = lm(price ~ . - pctCollege - sewer - waterfront - landValue - newConstruction
       + lotSize + livingArea  +  bedrooms+ bathrooms + age + lotSize:age + lotSize:fireplaces 
       + age:livingArea + age:centralAir + livingArea:fireplaces + livingArea:bathrooms
