--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -84,29 +84,15 @@ ggplot(capmetro) +
 saratoga = (SaratogaHouses)
 
 head(saratoga)
-
+saratoga$centralAir = ifelse(saratoga$centralAir == "Yes",1,0)
+saratoga$centralAir = as.numeric(saratoga$centralAir)
 houseX = model.matrix(price~(.- pctCollege - sewer - waterfront - landValue - newConstruction -heating - fuel- sewer)^2, data = saratoga)[,-1] 
-
+class(saratoga$centralAir)
 houseY = saratoga$price
 
 houseLasso = gamlr(houseX, houseY, alpha = 1)
 plot(houseLasso)
 lambdamin = which.min(AICc(houseLasso))
-
-###
-
-outcome <- "mpg"
-variables <- c("cyl", "disp", "hp", "carb")
-
-
-print(f)
-# mpg ~ cyl + disp + hp + carb
-
-
-# The new line of code
-model <- eval(bquote(   lm(.(f), data = mtcars)   ))
-
-###
 
 houseCoef = coef(houseLasso)
 houseCoef
@@ -117,19 +103,12 @@ coefs = coefData %>%
 coefs
 coefs_fields = cbind(newColName = rownames(coefs), coefs)
 coefs_fields
-# rownames(coefData) <- 1:nrow(coefData)
 coef_vector = as.vector(coefs_fields[2:nrow(coefs_fields),1])
 coef_vector
-# coef_vector = replace(coef_vector,1, "price")
-coef_vector
-# coef_fields = coefData[2:nrow(coefData),1]
 f <- as.formula(
   paste("price", 
-        paste(coef_fields, collapse = " + "), 
+        paste(coef_vector, collapse = " + "), 
         sep = " ~ "))
-# 
-# rownames = row.names(coefs)
-# rownames
 saratoga_split = initial_split(saratoga, prop = 0.8)
 saratoga_train = training(saratoga_split)
 saratoga_test = testing(saratoga_split)
