--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -226,6 +226,10 @@ confusion_out_logit
 ```
 
 ```{r}
+saratoga_split = initial_split(saratoga, prop = 0.8)
+saratoga_train = training(saratoga_split)
+saratoga_test = testing(saratoga_split)
+
 model1 = glm(children ~ market_segment + adults + customer_type + is_repeated_guest, hotel_dev, family = "binomial")
 plot(model1)
 ```
