--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -226,9 +226,9 @@ confusion_out_logit
 ```
 
 ```{r}
-saratoga_split = initial_split(saratoga, prop = 0.8)
-saratoga_train = training(saratoga_split)
-saratoga_test = testing(saratoga_split)
+hotel_dev_split = initial_split(hotel_dev, prop = 0.8)
+saratoga_train = training(hotel_dev_split)
+saratoga_test = testing(hotel_dev_split)
 
 model1 = glm(children ~ market_segment + adults + customer_type + is_repeated_guest, hotel_dev, family = "binomial")
 plot(model1)
