--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -104,36 +104,13 @@ coefData$magnitude = round(abs(coefData$seg100),2)
 coefData
 coefData = coefData %>%
   filter(magnitude > 0)
-coef_vector = coefData %>% cbind(newColName = rownames(coefs), coefs) %>%
-  as.vector(coefData[2:nrow(coefData),1])
-```
-
-
-```{r}
-coef_vextor = coef_vextor %>%
-  filter(magnitude > 0)
-coef_vextor = round(abs(coef_vector$seg100),2)
-coef_vector
-cbind(newColName = rownames(coefs), coefs) %>%
-  as.vector(coefs_fields[2:nrow(coefs_fields),1])
-coef_vector
-houseCoef = coef(houseLasso)
-houseCoef
-coefData = as.data.frame(as.matrix(houseCoef))
-coefData
-coefData$magnitude = round(abs(coefData$seg100),2)
-coefData
-coefs = coefData %>%
-  filter(magnitude>0)
-coefs
-coefs_fields = cbind(newColName = rownames(coefs), coefs)
-coefs_fields
-coef_vector = as.vector(coefs_fields[2:nrow(coefs_fields),1])
-coef_vector
+coefData = cbind(newColName = rownames(coefData), coefData)
+coef_vector = as.vector(coefData[2:nrow(coefData),1])
 f <- as.formula(
   paste("price", 
         paste(coef_vector, collapse = " + "), 
         sep = " ~ "))
+
 saratoga_split = initial_split(saratoga, prop = 0.8)
 saratoga_train = training(saratoga_split)
 saratoga_test = testing(saratoga_split)
@@ -141,14 +118,6 @@ saratoga_test = testing(saratoga_split)
 lm2 = lm(price ~ . - pctCollege - sewer - waterfront - landValue - newConstruction, data=saratoga_train)
 
 lmLasso = eval(bquote(lm(.(f), data = saratoga)))
-
-### lm for soft code variables
-# lmLasso = lm(price ~ . - pctCollege - sewer - waterfront - landValue - newConstruction
-#       + lotSize + livingArea  +  bedrooms+ bathrooms + age + lotSize:age + lotSize:fireplaces 
-#       + age:livingArea + age:centralAir + livingArea:fireplaces + livingArea:bathrooms
-#       + livingArea:rooms + livingArea:centralAir + bedrooms:fireplaces + fireplaces:centralAir
-#       + bathrooms:rooms + bathrooms:centralAir, data = saratoga)
-
 
 k_grid = c(2:100)
 K_folds = 5
@@ -176,11 +145,6 @@ minKModel = map(houseKNN$train, ~ knnreg(price ~ lotSize + livingArea
 rmse(lm2, saratoga_test)
 rmse(lmLasso, saratoga_test)
 map2_dbl(minKModel, houseKNN$test, modelr::rmse)
-
-##################################################################################
-#Re-Lasso
-
-
 ```
 
 #Number 3
