--- a/BowKad_DM2.Rmd
+++ b/BowKad_DM2.Rmd
@@ -244,6 +244,7 @@ childCV = cv.gamlr(childX,childY, nfold = 10, standardize = FALSE,
 ```
 #lasso testing
 ```{r}
+library(glmnet)
 hotel_dev = read.csv(here("data", "hotels_dev.csv"))
 hotel_val = read.csv(here("data", "hotels_val.csv"))
 
@@ -253,22 +254,28 @@ hotel_dev_test = testing(hotel_dev_split)
 # #Define predictor and response variables
 # y <- mtcars$hp
 # x <- data.matrix(mtcars[, c('mpg', 'wt', 'drat', 'qsec')])
-
-
+childY <- hotel_dev_train$children
+childX <- model.matrix(children ~ .-arrival_date -1, data = hotel_dev_train)
+childMatrix= t(model.matrix(children ~ .-arrival_date -1, data = hotel_dev_test))
 # #fit lasso regression model using k-fold cross-validation
 # cv_model <- cv.glmnet(x, y, alpha = 1)
 # best_lambda <- cv_model$lambda.min
-# 
+childLasso <- cv.glmnet(x = childX,y = childY ,alpha = 1, family = "binomial", numfold = 5, trace.it = 1, standardize = FALSE)
+best_lambda <- childLasso$lambda.min
+
 # #display optimal lambda value
 # best_lambda
-# 
+
 # #view plot of test MSE's vs. lambda values
 # plot(cv_model)
-# 
+plot(childLasso)
 # #view coefficients of best model
 # best_model <- glmnet(x, y, alpha = 1, lambda = best_lambda)
 # coef(best_model)
-# 
+################################
+childBest <- glmnet(childX,childY,alpha = 1, lambda = best_lambda, family = "binomial", numfold = 5, trace.it = 1, standardize = FALSE)
+predict(childBest, s = best_lambda, newx = hotel_dev_test)
+################################
 # #make a prediction for the response value of a new observation
 # new = matrix(c(24, 2.5, 3.5, 18.5), nrow=1, ncol=4) 
 # predict(best_model, s = best_lambda, newx = new)
